--- a/Android/Ascent/app/build.gradle
+++ b/Android/Ascent/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id  'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -58,6 +59,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -78,7 +80,8 @@ dependencies {
 
 
     //View binding delegate
-    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.3'
+
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6'
     //CardView
     implementation "androidx.cardview:cardview:1.0.0"
     //Glide
@@ -146,10 +149,12 @@ dependencies {
 
     //AppAuth
     implementation 'net.openid:appauth:0.9.1'
-    //Permissions
-    def permissionVer = '4.9.2'
-    implementation "com.github.permissions-dispatcher:permissionsdispatcher:$permissionVer"
-    kapt "com.github.permissions-dispatcher:permissionsdispatcher-processor:$permissionVer"
+
+
+    implementation "com.github.permissions-dispatcher:ktx:1.1.4"
+    def versionKapt = '4.9.2'
+    implementation "com.github.permissions-dispatcher:permissionsdispatcher:$versionKapt"
+    //kapt "com.github.permissions-dispatcher:permissionsdispatcher-processor:$versionKapt"
 
 
     //pagination
@@ -157,6 +162,10 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
+    //Firebase dependencies
+    implementation platform('com.google.firebase:firebase-bom:29.3.1')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation('com.google.firebase:firebase-messaging')
     //encrypted shared prefs
     implementation "androidx.security:security-crypto:1.0.0"
     // For Identity Credential APIs
