--- a/Android/Ascent/build.gradle
+++ b/Android/Ascent/build.gradle
@@ -3,8 +3,9 @@ buildscript {
     ext.kotlin_version = "1.6.10"
     ext.hilt_version = "2.38.1"
     repositories {
-        google()
         mavenCentral()
+        google()
+
 
 
     }
@@ -13,7 +14,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
-
+        classpath 'com.google.gms:google-services:4.3.10'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
