--- a/Android/YourDrive/app/build.gradle
+++ b/Android/YourDrive/app/build.gradle
@@ -5,14 +5,15 @@ plugins {
 
 android {
     namespace 'com.example.yourdrive'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.yourdrive"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
+        manifestPlaceholders = [appAuthRedirectScheme: 'youdrive']
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -37,11 +38,48 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation project(path: ':core_mvvm')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //CardView
+    implementation "androidx.cardview:cardview:1.0.0"
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    //RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation 'com.hannesdorfmann:adapterdelegates4:4.3.0'
+    implementation 'com.hannesdorfmann:adapterdelegates4-pagination:4.3.0'
+
+    def coroutinesVersion = '1.5.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+
+
+    def retrofitVersion = '2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
+
+    //ViewPager
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'me.relex:circleindicator:2.1.6'
+
+    //AppAuth
+    implementation 'net.openid:appauth:0.9.1'
+
+    implementation "androidx.security:security-crypto:1.0.0"
+
+    implementation "androidx.security:security-app-authenticator:1.0.0-alpha02"
+
+    implementation "androidx.security:security-identity-credential:1.0.0-alpha03"
+
+
+
+
+
 }
